--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
 		"react-icons": "^4.10.1",
 		"react-polyfills": "0.0.1",
 		"react-router": "^6.0.2",
-		"react-router-dom": "^6.14.1"
+		"react-router-dom": "^6.14.1",
+		"zustand": "^4.3.9"
 	}
 }
